--- a/HomeworkPortal/Views/Lesson/Delete.cshtml
+++ b/HomeworkPortal/Views/Lesson/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "_LayoutAdmin";
 }
-@model Lesson
+@model LessonModel
 <h2>Delete Lesson</h2>
 <hr />
 <h4>Are you sure you want to delete the lesson named "@Model.Name"?</h4>
