--- a/HomeworkPortal/Views/Lesson/Update.cshtml
+++ b/HomeworkPortal/Views/Lesson/Update.cshtml
@@ -2,7 +2,7 @@
     Layout = "_LayoutAdmin";
 }
 
-@model Lesson
+@model LessonModel
 <h2>Update Lesson</h2>
 <div class="row">
     <div class="col-md-4">
