--- a/HomeworkPortal/Views/_ViewImports.cshtml
+++ b/HomeworkPortal/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using HomeworkPortal
 @using HomeworkPortal.Models
+@using HomeworkPortal.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
