--- a/HomeworkPortal/Views/Category/Update.cshtml
+++ b/HomeworkPortal/Views/Category/Update.cshtml
@@ -1,24 +1,18 @@
 ﻿@{
     Layout = "_LayoutAdmin";
 }
-@model LessonModel
+@model CategoryModel
 @section CardHeader {
-    <span>Ürün Ekle</span>
+    <span>Kategori Düzenle</span>
 }
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Lesson" asp-action="Add" method="post">
-
+        <form asp-controller="Category" asp-action="Update" method="post">
             <div class="mb-2">
                 <label asp-for="Name"></label>
+                <input asp-for="Id" class="form-control" type="hidden" />
                 <input asp-for="Name" class="form-control" />
                 <span class="text-danger" asp-validation-for="Name"></span>
-            </div>
-            <div class="mb-2">
-                <label asp-for="CategoryId"> </label>
-                <select asp-for="CategoryId" class="form-control" asp-items="@ViewBag.Categories">
-                    <option value="">Seçiniz</option>
-                </select>
             </div>
             <div class="mb-2">
                 <input asp-for="IsActive" class="form-check-input" />
@@ -26,12 +20,11 @@
                 <span class="text-danger" asp-validation-for="IsActive"></span>
             </div>
             <div class="mb-2">
-                <input type="submit" value="Save" class="btn btn-primary btn-sm" />
+                <input type="submit" value="Kaydet" class="btn btn-primary btn-sm" />
             </div>
         </form>
     </div>
 </div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
