--- a/HomeworkPortal/Views/Lesson/Update.cshtml
+++ b/HomeworkPortal/Views/Lesson/Update.cshtml
@@ -14,6 +14,12 @@
                 <span class="text-danger" asp-validation-for="Name"></span>
             </div>
             <div class="mb-2">
+                <label asp-for="CategoryId"> </label>
+                <select asp-for="CategoryId" class="form-control" asp-items="@ViewBag.Categories">
+                    <option value="">Seçiniz</option>
+                </select>
+            </div>
+            <div class="mb-2">
                 <input asp-for="IsActive" class="form-check-input" />
                 <label asp-for="IsActive"></label>
                 <span class="text-danger" asp-validation-for="IsActive"></span>
