--- a/HomeworkPortal/Views/Shared/_SideNav.cshtml
+++ b/HomeworkPortal/Views/Shared/_SideNav.cshtml
@@ -16,6 +16,12 @@
         </a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" asp-controller="Category" asp-action="Index">
+            <i class="fas fa-fw fa-list"></i>
+            <span>Kategoriler</span>
+        </a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" asp-controller="Lesson" asp-action="Index">
             <i class="fas fa-fw fa-list"></i>
             <span>Dersler</span>
