--- a/HomeworkPortal/Views/Category/Add.cshtml
+++ b/HomeworkPortal/Views/Category/Add.cshtml
@@ -14,7 +14,7 @@
                 <span class="text-danger" asp-validation-for="Name"></span>
             </div>
             <div class="mb-2">
-                <input asp-for="IsActive" class="form-check-input" />
+                <input asp-for="IsActive" class="form-check-inline" />
                 <label asp-for="IsActive"></label>
                 <span class="text-danger" asp-validation-for="IsActive"></span>
             </div>
