--- a/HomeworkPortal/Views/Category/Index.cshtml
+++ b/HomeworkPortal/Views/Category/Index.cshtml
@@ -15,6 +15,8 @@
             <th>Id</th>
             <th>Adı</th>
             <th>Durumu</th>
+            <th>Eklenme</th>
+            <th>Güncellenme</th>
             <th>Düzenle - Sil</th>
         </tr>
     </thead>
@@ -34,6 +36,8 @@
                         <span class="badge bg-danger text-white">Pasif</span>
                     }
                 </td>
+                <td>@item.Created</td>
+                <td>@item.Updated</td>
                 <td>
                     <a asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Düzenle</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Sil</a>
