--- a/HomeworkPortal/Views/Lesson/Index.cshtml
+++ b/HomeworkPortal/Views/Lesson/Index.cshtml
@@ -17,6 +17,8 @@
         <tr>
             <td>Id</td>
             <td>Name</td>
+            <th>Eklenme</th>
+            <th>Güncellenme</th>
             <td>Actions</td>
         </tr>
     </thead>
@@ -26,6 +28,7 @@
             <tr>
                 <td>@lesson.Id</td>
                 <td>@lesson.Name</td>
+
                 <td>
                     @if (lesson.IsActive)
                     {
@@ -38,6 +41,8 @@
 
 
                 </td>
+                <td>@lesson.Created</td>
+                <td>@lesson.Updated</td>
                 <td>
                     <a asp-action="Update" asp-controller="Lesson" class="btn btn-primary btn-sm" asp-route-id="@lesson.Id">Edit</a>
                     <a asp-action="Delete" asp-controller="Lesson" class="btn btn-danger btn-sm" asp-route-id="@lesson.Id">Delete</a>
