--- a/HomeworkPortal/Views/Lesson/Index.cshtml
+++ b/HomeworkPortal/Views/Lesson/Index.cshtml
@@ -4,22 +4,23 @@
 
 @model List<LessonModel>
 
-<h2>Lessons</h2>
-<hr />
-<a asp-action="Add" asp-controller="Lesson" class="btn btn-primary btn-sm mb-2">Add</a>
+@section CardHeader {
+    <span>Dersler</span>
+}
+<a asp-action="Add" asp-controller="Lesson" class="btn btn-primary btn-sm mb-2">Ekle</a>
 
 @if (Model.Count == 0)
 {
-    <div class="alert alert-danger col-md-4 mb-2">No lessons added yet!</div>
+    <div class="alert alert-danger col-md-4 mb-2">Henüz hiç bir ders eklenmedi!</div>
 }
 <table class="table">
     <thead>
         <tr>
             <td>Id</td>
-            <td>Name</td>
-            <th>Eklenme</th>
-            <th>Güncellenme</th>
-            <td>Actions</td>
+            <td>Adı</td>
+            <td>Eklenme</td>
+            <td>Güncellenme</td>
+            <td>İşlemler</td>
         </tr>
     </thead>
     <tbody>
