--- a/HomeworkPortal/Views/Shared/_SideNav.cshtml
+++ b/HomeworkPortal/Views/Shared/_SideNav.cshtml
@@ -21,20 +21,28 @@
             <span>Kategoriler</span>
         </a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" asp-controller="Lesson" asp-action="Index">
-            <i class="fas fa-fw fa-list"></i>
-            <span>Dersler</span>
-        </a>
-    </li>
+
     @if (User.IsInRole("Admin"))
     {
+        <li class="nav-item">
+            <a class="nav-link" asp-controller="Lesson" asp-action="Index">
+                <i class="fas fa-fw fa-book"></i>
+                <span>Dersler</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-controller="Assignment" asp-action="Index">
+                <i class="fas fa-fw fa-book-open"></i>
+                <span>Ödevler</span>
+            </a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" asp-controller="User" asp-action="Index">
                 <i class="fas fa-fw fa-user"></i>
                 <span>Üyeler</span>
             </a>
         </li>
+      
     }
     <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline">
