--- a/HomeworkPortal/Views/Category/Add.cshtml
+++ b/HomeworkPortal/Views/Category/Add.cshtml
@@ -3,7 +3,7 @@
 }
 @model CategoryModel
 @section CardHeader {
-    <span>Kategori Ekle</span>
+    <span>Sınıf Ekle</span>
 }
 <div class="row">
     <div class="col-md-4">
