--- a/HomeworkPortal/Views/Category/Index.cshtml
+++ b/HomeworkPortal/Views/Category/Index.cshtml
@@ -5,7 +5,7 @@
 @model List<CategoryModel>
 
 @section CardHeader {
-    <span>Kategoriler</span>
+    <span>Sınıflar</span>
 }
 
 <a asp-action="Add" asp-controller="Category" class="btn btn-primary btn-sm mb-2">Ekle</a>
