--- a/HomeworkPortal/Views/Category/Update.cshtml
+++ b/HomeworkPortal/Views/Category/Update.cshtml
@@ -3,7 +3,7 @@
 }
 @model CategoryModel
 @section CardHeader {
-    <span>Kategori Düzenle</span>
+    <span>Sınıfı Düzenle</span>
 }
 <div class="row">
     <div class="col-md-4">
