--- a/HomeworkPortal/Views/Lesson/Delete.cshtml
+++ b/HomeworkPortal/Views/Lesson/Delete.cshtml
@@ -2,7 +2,7 @@
     Layout = "_LayoutAdmin";
 }
 @model LessonModel
-<h2>Delete Lesson</h2>
+<h2>Dersi Sil</h2>
 <hr />
 <h4>Are you sure you want to delete the lesson named "@Model.Name"?</h4>
 
