--- a/HomeworkPortal/Views/Lesson/Update.cshtml
+++ b/HomeworkPortal/Views/Lesson/Update.cshtml
@@ -3,7 +3,7 @@
 }
 
 @model LessonModel
-<h2>Update Lesson</h2>
+<h2>Dersi Güncelle</h2>
 <div class="row">
     <div class="col-md-4">
         <form asp-controller="Lesson" asp-action="Update" method="post">
