--- a/HomeworkPortal/Views/Category/Delete.cshtml
+++ b/HomeworkPortal/Views/Category/Delete.cshtml
@@ -2,10 +2,10 @@
     Layout = "_LayoutAdmin";
 }
 @section CardHeader {
-    <span>Kategori Sil</span>
+    <span>Sınıfı Sil</span>
 }
 @model CategoryModel
-<h4>@Model.Name adlı kategori silinecektir, Onaylıyor musunuz?</h4>
+<h4>@Model.Name adlı sınıf silinecektir, Onaylıyor musunuz?</h4>
 <form method="post" asp-action="Delete">
     <input type="hidden" asp-for="Id" />
     <input type="submit" value="Sil" class="btn btn-danger btn-sm" />
