--- a/HomeworkPortal/Views/Lesson/Add.cshtml
+++ b/HomeworkPortal/Views/Lesson/Add.cshtml
@@ -3,7 +3,7 @@
 }
 @model LessonModel
 @section CardHeader {
-    <span>Ürün Ekle</span>
+    <span>Ders Ekle</span>
 }
 <div class="row">
     <div class="col-md-4">
@@ -15,7 +15,7 @@
                 <span class="text-danger" asp-validation-for="Name"></span>
             </div>
             <div class="mb-2">
-                <label asp-for="CategoryId"> </label>
+                <label asp-for="CategoryId"></label>
                 <select asp-for="CategoryId" class="form-control" asp-items="@ViewBag.Categories">
                     <option value="">Seçiniz</option>
                 </select>
