--- a/HomeworkPortal/Views/Shared/_SideNav.cshtml
+++ b/HomeworkPortal/Views/Shared/_SideNav.cshtml
@@ -1,6 +1,6 @@
 ﻿<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
@@ -17,8 +17,8 @@
     </li>
     <li class="nav-item">
         <a class="nav-link" asp-controller="Category" asp-action="Index">
-            <i class="fas fa-fw fa-list"></i>
-            <span>Kategoriler</span>
+            <i class="fas fa-fw fa-laptop-house"></i>
+            <span>Sınıflar</span>
         </a>
     </li>
 
