--- a/HomeworkPortal/Views/Grade/Index.cshtml
+++ b/HomeworkPortal/Views/Grade/Index.cshtml
@@ -2,13 +2,13 @@
     Layout = "_LayoutAdmin";
 }
 
-@model List<CategoryModel>
+@model List<GradeModel>
 
 @section CardHeader {
     <span>Sınıflar</span>
 }
 
-<a asp-action="Add" asp-controller="Category" class="btn btn-primary btn-sm mb-2">Ekle</a>
+<a asp-action="Add" asp-controller="Grade" class="btn btn-primary btn-sm mb-2">Ekle</a>
 <table class="table">
     <thead>
         <tr>
