--- a/HomeworkPortal/Views/Lesson/Add.cshtml
+++ b/HomeworkPortal/Views/Lesson/Add.cshtml
@@ -15,8 +15,8 @@
                 <span class="text-danger" asp-validation-for="Name"></span>
             </div>
             <div class="mb-2">
-                <label asp-for="CategoryId"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="@ViewBag.Categories">
+                <label asp-for="GradeId"></label>
+                <select asp-for="GradeId" class="form-control" asp-items="@ViewBag.Categories">
                     <option value="">Seçiniz</option>
                 </select>
             </div>
