--- a/HomeworkPortal/Views/Lesson/Update.cshtml
+++ b/HomeworkPortal/Views/Lesson/Update.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="mb-2">
                 <label asp-for="GradeId"> </label>
-                <select asp-for="GradeId" class="form-control" asp-items="@ViewBag.Categories">
+                <select asp-for="GradeId" class="form-control" asp-items="@ViewBag.Grades">
                     <option value="">Seçiniz</option>
                 </select>
             </div>
