--- a/HomeworkPortal/Views/Admin/Index.cshtml
+++ b/HomeworkPortal/Views/Admin/Index.cshtml
@@ -2,5 +2,74 @@
     Layout = "_LayoutAdmin";
 }
 
-<h1>Index</h1>
+<h1 class="h3 mb-4 text-gray-800">Portal Güncel Durum</h1>
 
+<div class="row">
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-primary shadow h-100 py-2">
+            <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                            <a asp-controller="Assignment" asp-action="Index">Ödevler</a>
+                        </div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="AssignmentCount">3</div>
+                    </div>
+                    <div class="col-auto">
+                        <i class="fas fa-book-open fa-2x text-gray-300"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <div id="divResult"></div>
+    </div>
+</div>
+@section Scripts {
+    <script>
+        // HUB Bağlantı
+        var connectionHub = new signalR.HubConnectionBuilder()
+            .withUrl("/general-hub", signalR.HttpTransportType.WebSockets)
+            .configureLogging(signalR.LogLevel.Information)
+            .build();
+        // Category HUB
+        connectionHub.on("onAssignmentAdd", (d) => {
+            $("#AssignmentCount").html(d);
+            $("#divResult")
+                .show()
+                .removeClass()
+                .addClass("alert alert-info")
+                .html("Ödev Eklendi")
+                .fadeOut(5000);
+        });
+        connectionHub.on("onAssignmentUpdate", (d) => {
+            $("#AssignmentCount").html(d);
+            $("#divResult")
+                .show()
+                .removeClass()
+                .addClass("alert alert-info")
+                .html("Ödev Güncellendi")
+                .fadeOut(5000);
+        });
+        connectionHub.on("onAssignmentDelete", (d) => {
+            $("#AssignmentCount").html(d);
+            $("#divResult")
+                .show()
+                .removeClass()
+                .addClass("alert alert-info")
+                .html("Ödev Silindi")
+                .fadeOut(5000);
+        });
+        // start connection
+        function fullfilled() {
+            console.log("Bağlantı Başarılı");
+        }
+        function rejected() {
+            console.log("Bağlantı Hatalı");
+        }
+        connectionHub.start().then(fullfilled, rejected);
+    </script>
+}
