--- a/HomeworkPortal/Views/Shared/_LayoutAdmin.cshtml
+++ b/HomeworkPortal/Views/Shared/_LayoutAdmin.cshtml
@@ -194,6 +194,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="~/sbadmin/js/sb-admin-2.min.js"></script>
+    <script src="~/js/signalr.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 
     @await Component.InvokeAsync("Notyf")
