--- a/HomeworkPortal/Views/Lesson/Index.cshtml
+++ b/HomeworkPortal/Views/Lesson/Index.cshtml
@@ -45,8 +45,8 @@
                 <td>@lesson.Created</td>
                 <td>@lesson.Updated</td>
                 <td>
-                    <a asp-action="Update" asp-controller="Lesson" class="btn btn-primary btn-sm" asp-route-id="@lesson.Id">Edit</a>
-                    <a asp-action="Delete" asp-controller="Lesson" class="btn btn-danger btn-sm" asp-route-id="@lesson.Id">Delete</a>
+                    <a asp-action="Update" asp-controller="Lesson" class="btn btn-primary btn-sm" asp-route-id="@lesson.Id">Düzenle</a>
+                    <a asp-action="Delete" asp-controller="Lesson" class="btn btn-danger btn-sm" asp-route-id="@lesson.Id">Sil</a>
                 </td>
             </tr>
         }
