--- a/HomeworkPortal/Views/Shared/_Layout.cshtml
+++ b/HomeworkPortal/Views/Shared/_Layout.cshtml
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HomeworkPortal.styles.css" asp-append-version="true" />
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        .content-wrapper {
+            flex: 1 0 auto;
+        }
+        footer {
+            flex-shrink: 0;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -26,7 +43,7 @@
                             <a class="nav-link" asp-controller="Home" asp-action="Index">Ana Sayfa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Assignment" asp-action="Index">Ödevler</a>
+                            <a class="nav-link" asp-controller="StudentDashboard" asp-action="Index">Ödev Paneli</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Lesson" asp-action="Index">Dersler</a>
@@ -43,9 +60,11 @@
         </nav>
     </header>
 
-    @RenderBody()
+    <div class="content-wrapper">
+        @RenderBody()
+    </div>
 
-    <footer class="bg-dark text-light py-4 mt-5">
+    <footer class="bg-dark text-light py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
